set min-height and height to auto

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -81,7 +81,8 @@ a {
 
 .project {
     background-image: url("../images/white_bg.jpg");
-    height: 70%;
+    min-height: 70%;
+    height: auto;
     text-align: center;
 }
 
