--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -52,27 +52,27 @@ img {
     cursor: pointer;
 }
 
-#nav {
+.nav {
     position: fixed;
-    padding: 0;
     left: 50%;
     transform: translate(-50%, 0);
+    z-index: 2;
 }
 
-#nav ul li a{
+.nav .nav-item a {
     color: #111;
-    font-size: 14px;
+    font-size: 18px;
     border: 0px solid black;
     border-radius: 5px;
 }
 
-#nav ul li {
+.nav .nav-item {
     border: 1px solid black;
     border-radius: 5px;
     background-color: darkgrey;
 }
 
-#nav ul li:hover {
+.nav .nav-item:hover {
     cursor: pointer;
 }
 
